fix(docs search): textfield padding on safari 13)

--- a/src/components/docs-search/docs-search.scss
+++ b/src/components/docs-search/docs-search.scss
@@ -44,6 +44,11 @@ docs-search {
     cursor: pointer;
   }
 
+  .algolia-autocomplete {
+    appearance: textfield;
+    -webkit-appearance: textfield;
+  }
+
   .algolia-autocomplete[class^='algolia-autocomplete'] {
     flex: 1;
 
